# SoftwareRenderer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
examples/: CMakeLists.txt  main.cpp
include/SoftwareRenderer/: BufferArray.h  BufferManager.h  DataBuffer.h  FragmentShader.h  GeometryShader.h  ModelLoader.h  RenderPipeline.h  Renderer.h  ThreadPool.h  Vertex.h  VertexShader.h  ZBuffer.h
src/: BufferArray.cpp  CMakeLists.txt  FragmentShader.cpp  GeometryShader.cpp  ModelLoader.cpp  RenderPipeline.cpp  Renderer.cpp  Vertex.cpp  VertexShader.cpp  ZBuffer.cpp
